buildscript {
    repositories {
        gradlePluginPortal()
        mavenCentral()
    }
}

plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.Petcare'
version = '0.0.1-SNAPSHOT'
description = 'Ecommerce - Petcare'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

javadoc {
    options.tags = [
            'apiNote:a:API Note:'
    ]
}

repositories {
	mavenCentral()
}

dependencies {

	// Dependencias Web y seguridad
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

	// Test
	testImplementation 'org.springframework.boot:spring-boot-starter-test' // Librerías de testing
	testImplementation 'org.springframework.security:spring-security-test' // Librerías de testing de seguridad
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher' // Launcher de JUnit
	testImplementation 'com.h2database:h2' // Base de datos H2 para testing
	implementation 'org.testng:testng:7.7.0'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

	// Dependencias de JPA y base de datos
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // JPA
	implementation 'org.springframework.boot:spring-boot-starter-data-rest' // Repositorios expuestos como API REST
	//runtimeOnly 'com.h2database:h2'
    implementation 'org.postgresql:postgresql'
	runtimeOnly 'com.mysql:mysql-connector-j:9.2.0' // Conector MySQL

	// Lombok
	compileOnly 'org.projectlombok:lombok' // Lombok para simplificar código
	annotationProcessor 'org.projectlombok:lombok' // Procesador de anotaciones de Lombok

	// JJWT (para autenticación y tokens JWT) - UPGRADED: 0.11.5 → 0.12.5 (CVE fix)
	implementation 'io.jsonwebtoken:jjwt-api:0.12.5' // API de JWT
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5' // Implementación de JWT
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5' // Integración con Jackson para JWT

	// Mail
	implementation 'org.springframework.boot:spring-boot-starter-mail' // Starter para enviar correos electrónicos
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf' // Starter para plantillas HTML

	// PDF - UPGRADED: 7.2.5 → 8.0.5 (CVE fixes)
	implementation 'com.itextpdf:itext-core:8.0.5'
	//implementation 'com.itextpdf:bouncy-castle-adapter:8.0.5'
    implementation 'org.flywaydb:flyway-database-postgresql'

	// Validación
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// Flyway Database Migration
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.flywaydb:flyway-mysql'

	// Documentacion
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.11'

    // Monitor
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // Dotenv for environment variables
    implementation 'io.github.cdimascio:dotenv-java:3.0.2'

}

tasks.named('test') {
	useJUnitPlatform()
	jvmArgs '-javaagent:' + configurations.testRuntimeClasspath.find { it.name.contains('mockito-core') }
}

tasks.withType(JavaCompile) {
	options.compilerArgs += "-Xlint:deprecation"
}
